Bug 443323 - [wayland] Can't switch activities by Meta+Tab shortcut
Summary: [wayland] Can't switch activities by Meta+Tab shortcut
Status: RESOLVED FIXED
Alias: None
Product: kactivitymanagerd
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Andrey
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2021-10-04 22:52 UTC by Andrey
Modified: 2021-10-07 15:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey 2021-10-04 22:52:31 UTC
SUMMARY
The shortcut doesn't work on Wayland.

STEPS TO REPRODUCE
1. Run Plasma under Wayland with at least two activities already defined
2. Open any focused window
2. Hit Meta-Tab several times

OBSERVED RESULT
Activity is seems switching for a moment but returns back immediately.

EXPECTED RESULT
There should be switching between available activities in a loop.
Comment 1 Bug Janitor Service 2021-10-04 22:57:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/587
Comment 2 Andrey 2021-10-04 23:03:59 UTC
While testing the patch, hold down Meta and press Tab several times.
Otherwise, it'll trigger other issue with activity switching UI.
Comment 3 Andrey 2021-10-07 11:00:56 UTC
Git commit dbcc2e5cb15a334b3b0d098d4c1693bf25d12dfd by Andrey Butirsky.
Committed on 07/10/2021 at 11:00.
Pushed by butirsky into branch 'master'.

[wayland] fix activity switching shortcut (Meta+Tab)

Deletion of intermediate inputWindow is touchy, it interferes with the
switching probably because of focusing stuff.

M  +11   -7    imports/activitymanager/switcherbackend.cpp
M  +2    -0    imports/activitymanager/switcherbackend.h

https://invent.kde.org/plasma/plasma-desktop/commit/dbcc2e5cb15a334b3b0d098d4c1693bf25d12dfd
Comment 4 Andrey 2021-10-07 11:04:08 UTC
Git commit d843e72bd8020bbafa44f6c5b03ac220892888c5 by Andrey Butirsky.
Committed on 07/10/2021 at 11:03.
Pushed by butirsky into branch 'Plasma/5.23'.

[wayland] fix activity switching shortcut (Meta+Tab)

Deletion of intermediate inputWindow is touchy, it interferes with the
switching probably because of focusing stuff.


(cherry picked from commit dbcc2e5cb15a334b3b0d098d4c1693bf25d12dfd)

M  +11   -7    imports/activitymanager/switcherbackend.cpp
M  +2    -0    imports/activitymanager/switcherbackend.h

https://invent.kde.org/plasma/plasma-desktop/commit/d843e72bd8020bbafa44f6c5b03ac220892888c5