[wayland] fix activity switching shortcut (Meta+Tab)

Deletion of intermediate inputWindow is touchy, it interferes with the
switching probably because of focusing stuff.

BUG: 443323


(cherry picked from commit dbcc2e5cb15a334b3b0d098d4c1693bf25d12dfd)